--- a/FSUIPC6/FSUIPC6.ini
+++ b/FSUIPC6/FSUIPC6.ini
@@ -1,6 +1,6 @@
 [General]
 UpdatedByVersion=6009
-History=BYEU7N03L8K4E3NAXE7SH
+History=4BQ8Q0DFZLY7Y3YF2JCXP
 InitDelayDevicesToo=No
 PMDG737offsets=Auto
 PMDG747offsets=Auto
@@ -70,10 +70,10 @@ ComReadLoopTime=20
 Console=No
 ConsoleWindowTopMost=No
 ControlsListBuild=27615
-FSVersionUsed="Lockheed Martin® Prepar3D® v5",5.2.22.27615
-SimConnectUsed=5.2.0.0
 LogWrites=Yes
 LogEvents=Yes
+FSVersionUsed="Lockheed Martin® Prepar3D® v5",5.2.22.27615
+SimConnectUsed=5.2.0.0
 
 [Traffic Limiter]
 AirportPreference=50
@@ -119,8 +119,14 @@ CowlFlaps3Control=66164
 CowlFlaps4Control=66165
 SteeringTillerControl=0
 MaxSteerSpeed=60
-Rudder=-16380,-1032,1088,16380
-SlopeRudder=-15
+Rudder=-16380,-512,512,16380
+SlopeRudder=-14
+Throttle1=-16159,-512,512,16383/48
+Throttle2=-16380,-512,512,16380/48
+Throttle3=-16380,-512,512,16380/48
+SyncSlopeThrottle3=0/0
+Throttle4=-16380,-512,512,16380/48
+SyncSlopeThrottle4=1/0
 
 [Axes]
 PollInterval=10
@@ -131,6 +137,8 @@ RangeRepeatRate=10
 [Buttons]
 PollInterval=25
 ButtonRepeat=20,10
+1=P2,9,C65966,0 	-{THROTTLE1_DECR}-
+2=U2,9,C65967,0 	-{THROTTLE1_CUT}-
 
 [AutoSave]
 Next=2
@@ -202,6 +210,7 @@ Device9=Headphones (Soundcore Life Q30 Stereo)
 
 
 
+
 [JoystickCalibration]
 AllowSuppressForPFCquad=Yes
 ExcludeThrottleSet=Yes
@@ -260,11 +269,10 @@ RangeRepeatRate=10
 
 [Axes.Aerosoft]
 RangeRepeatRate=10
-0=0X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
-1=0Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
-2=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
-3=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
-4=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+0=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
+1=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+2=2R,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
+3=2V,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
 
 [Buttons.Aerosoft]
 0=P0,6,C65758,0 	-{FLAPS_INCR}-
@@ -275,6 +283,8 @@ RangeRepeatRate=10
 5=R0,3,C65615,0 	-{ELEV_TRIM_UP}-
 6=P0,7,C65752,0 	-{PARKING_BRAKES}-
 7=P0,4,K90,8 	-{Key press: Z}-
+8=P2,9,C65966,0 	-{THROTTLE1_DECR}-
+9=U2,9,C65967,0 	-{THROTTLE1_CUT}-
 
 [Profile.FSLabs]
 1=FSLabs A320X IAE - FSLabs
@@ -300,14 +310,15 @@ RangeRepeatRate=10
 
 [AutoSaveFilesV5]
 Next=1
-1=Sat 201941
-2=Sat 202440
+1=Tue 020349
+2=Tue 020849
 
 [MacroFiles]
 1=disc a-t
 
 2=disc a-p
 3=FSLA3XX_MAIN
+4=QW787
 
 [Axes.FSLabs]
 RangeRepeatRate=10
@@ -362,8 +373,11 @@ Undocked=-846, 280, 632, 499
 
 [ClientNames]
 1=RAVISURFACEPRO
+
 [Profile.PMDG-747]
 1=PMDG 747-8F Cargolux Airlines International (LX-VCC | 2018 | DHL)
+2=PMDG 747-400 Delta Air Lines (N670US | 2008)
+
 [Buttons.PMDG-747]
 2=P0,9,K71,11 	-{Key press: ctl+shft+G}-
 3=P0,4,K90,11 	-{Key press: ctl+shft+Z}-
@@ -385,6 +399,7 @@ Undocked=-846, 280, 632, 499
 19=U2,8,C65967,0 	-{THROTTLE1_CUT}-
 20=R2,11,C65981,0 	-{THROTTLE4_DECR}-
 21=U2,11,C65982,0 	-{THROTTLE4_CUT}-
+
 [Axes.PMDG-747]
 RangeRepeatRate=10
 0=0X,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
@@ -397,6 +412,7 @@ RangeRepeatRate=10
 7=2V,256,D,11,0,0,0	-{ DIRECT: Throttle3 }-
 8=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
 9=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
+
 [JoystickCalibration.PMDG-747]
 AllowSuppressForPFCquad=Yes
 ExcludeThrottleSet=Yes
@@ -430,3 +446,162 @@ Throttle3=-16380,-512,512,16380/48
 Throttle4=-16380,-512,512,16380/48
 SyncSlopeThrottle4=1/0
 SyncSlopeThrottle3=0/0
+
+[Profile.QW-787]
+1=QualityWings 787-8 House (RR)
+2=QualityWings 787-9 British Airways
+
+[Buttons.QW-787]
+2=P0,9,K71,11 	-{Key press: ctl+shft+G}-
+3=P0,4,K90,11 	-{Key press: ctl+shft+Z}-
+4=R0,8,C65602,0 	-{THROTTLE_DECR}-
+5=U0,8,C65604,0 	-{THROTTLE_CUT}-
+6=R0,1,C65607,0 	-{ELEV_TRIM_DN}-
+7=R0,3,C65615,0 	-{ELEV_TRIM_UP}-
+8=P0,7,C65752,0 	-{PARKING_BRAKES}-
+9=P0,2,C66065,0 	-{SPOILERS_OFF}-
+10=P0,6,C65758,0 	-{FLAPS_INCR}-
+11=P0,5,C65759,0 	-{FLAPS_DECR}-
+12=P0,10,CM1:1,0 	-{Macro disc a-t: disc a-t}-
+13=P0,0,C65588,0 	-{BRAKES}-
+14=R2,10,C65971,0 	-{THROTTLE2_DECR}-
+15=U2,10,C65972,0 	-{THROTTLE2_CUT}-
+16=R2,9,C65966,0 	-{THROTTLE1_DECR}-
+17=U2,9,C65967,0 	-{THROTTLE1_CUT}-
+
+[Axes.QW-787]
+RangeRepeatRate=10
+0=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
+1=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+2=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+3=2R,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
+4=2V,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
+5=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
+6=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
+
+[JoystickCalibration.QW-787]
+AllowSuppressForPFCquad=Yes
+ExcludeThrottleSet=Yes
+ExcludeMixtureSet=Yes
+ExcludePropPitchSet=Yes
+SepRevsJetsOnly=No
+ApplyHeloTrim=No
+UseAxisControlsForNRZ=No
+FlapsSetControl=0
+FlapDetents=No
+ReverserControl=66292
+Reverser1Control=66422
+Reverser2Control=66425
+Reverser3Control=66428
+Reverser4Control=66431
+MaxThrottleForReverser=256
+AileronTrimControl=66731
+RudderTrimControl=66732
+CowlFlaps1Control=66162
+CowlFlaps2Control=66163
+CowlFlaps3Control=66164
+CowlFlaps4Control=66165
+SteeringTillerControl=0
+MaxSteerSpeed=60
+RudderBlendLowest=1
+Rudder=-16380,-512,512,16380/16
+SlopeRudder=-14
+Throttle1=-16383,-512,512,16287/48
+Throttle2=-16383,16319,16319,16352/48
+SyncSlopeThrottle2=1/0
+
+[Profile.AS-330]
+1=Aerosoft A333 professional EDELWEISS AIR HB-JHQ
+
+[Buttons.AS-330]
+2=P0,9,K71,11 	-{Key press: ctl+shft+G}-
+3=P0,4,K90,11 	-{Key press: ctl+shft+Z}-
+4=R0,8,C65602,0 	-{THROTTLE_DECR}-
+5=U0,8,C65604,0 	-{THROTTLE_CUT}-
+6=R0,1,C65607,0 	-{ELEV_TRIM_DN}-
+7=R0,3,C65615,0 	-{ELEV_TRIM_UP}-
+8=P0,7,C65752,0 	-{PARKING_BRAKES}-
+9=P0,2,C66065,0 	-{SPOILERS_OFF}-
+10=P0,6,C65758,0 	-{FLAPS_INCR}-
+11=P0,5,C65759,0 	-{FLAPS_DECR}-
+12=P0,10,CM1:1,0 	-{Macro disc a-t: disc a-t}-
+13=P0,0,C65588,0 	-{BRAKES}-
+14=R2,10,C65971,0 	-{THROTTLE2_DECR}-
+15=U2,10,C65972,0 	-{THROTTLE2_CUT}-
+16=R2,9,C65966,0 	-{THROTTLE1_DECR}-
+17=U2,9,C65967,0 	-{THROTTLE1_CUT}-
+
+[Axes.AS-330]
+RangeRepeatRate=10
+0=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
+1=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+2=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+3=2R,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
+4=2V,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
+5=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
+6=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
+
+[JoystickCalibration.AS-330]
+AllowSuppressForPFCquad=Yes
+ExcludeThrottleSet=Yes
+ExcludeMixtureSet=Yes
+ExcludePropPitchSet=Yes
+SepRevsJetsOnly=No
+ApplyHeloTrim=No
+UseAxisControlsForNRZ=No
+FlapsSetControl=0
+FlapDetents=No
+ReverserControl=66292
+Reverser1Control=66422
+Reverser2Control=66425
+Reverser3Control=66428
+Reverser4Control=66431
+MaxThrottleForReverser=256
+AileronTrimControl=66731
+RudderTrimControl=66732
+CowlFlaps1Control=66162
+CowlFlaps2Control=66163
+CowlFlaps3Control=66164
+CowlFlaps4Control=66165
+SteeringTillerControl=0
+MaxSteerSpeed=60
+RudderBlendLowest=1
+Rudder=-16380,-512,512,16380/16
+SlopeRudder=-14
+Throttle1=-16384,-512,512,16223/48
+Throttle2=-16384,-512,512,16255/48
+SyncSlopeThrottle2=127/127
+
+[JoystickCalibration.Aerosoft]
+AllowSuppressForPFCquad=Yes
+ExcludeThrottleSet=Yes
+ExcludeMixtureSet=Yes
+ExcludePropPitchSet=Yes
+SepRevsJetsOnly=No
+ApplyHeloTrim=No
+UseAxisControlsForNRZ=No
+FlapsSetControl=0
+FlapDetents=No
+ReverserControl=66292
+Reverser1Control=66422
+Reverser2Control=66425
+Reverser3Control=66428
+Reverser4Control=66431
+MaxThrottleForReverser=256
+AileronTrimControl=66731
+RudderTrimControl=66732
+CowlFlaps1Control=66162
+CowlFlaps2Control=66163
+CowlFlaps3Control=66164
+CowlFlaps4Control=66165
+SteeringTillerControl=0
+MaxSteerSpeed=60
+RudderBlendLowest=1
+Rudder=-16380,-512,512,16380
+SlopeRudder=-14
+Throttle1=-16159,-512,512,16383/32
+Throttle2=-16380,-512,512,16380/32
+Throttle3=-16380,-512,512,16380/48
+SyncSlopeThrottle3=0/0
+Throttle4=-16380,-512,512,16380/48
+SyncSlopeThrottle4=1/0
