--- a/FSUIPC6/FSUIPC6.ini
+++ b/FSUIPC6/FSUIPC6.ini
@@ -1,6 +1,6 @@
 [General]
 UpdatedByVersion=6009
-History=4BQ8Q0DFZLY7Y3YF2JCXP
+History=80NG8S5C7DS9DYR8VC5QO
 InitDelayDevicesToo=No
 PMDG737offsets=Auto
 PMDG747offsets=Auto
@@ -69,9 +69,9 @@ LuaRerunDelay=66
 ComReadLoopTime=20
 Console=No
 ConsoleWindowTopMost=No
-ControlsListBuild=27615
 LogWrites=Yes
 LogEvents=Yes
+ControlsListBuild=27615
 FSVersionUsed="Lockheed Martin® Prepar3D® v5",5.2.22.27615
 SimConnectUsed=5.2.0.0
 
@@ -184,6 +184,7 @@ Device6=DELL S2715H (NVIDIA High Definition Audio)
 Device7=Speakers (Realtek(R) Audio)
 Device8=Speakers (HyperX Cloud Stinger Core + 7.1)
 Device9=Headphones (Soundcore Life Q30 Stereo)
+Device10=G34WQC A (NVIDIA High Definition Audio)
 
 [Profile.PMDG]
 1=PMDG 737-800NGXu PMDG House (N738PM | 2019)
@@ -207,6 +208,7 @@ Device9=Headphones (Soundcore Life Q30 Stereo)
 19=PMDG 737-800NGXu SSW Aeromexico (XA-AMG| 2019)
 20=PMDG 737-800NGXu BW Norwegian Air Shuttle (SE-RRC | 2019 | Max Manus)
 21=PMDG 737-800NGXu BW Comair Limited (ZS-ZWW| 2019)
+22=PMDG 777-300ER Emirates (A6-ECN | 2009)
 
 
 
@@ -241,8 +243,10 @@ RangeRepeatRate=10
 0=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
 1=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
 2=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
-3=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
-4=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
+3=2R,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
+4=2V,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
+5=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
+6=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
 
 [Buttons.PMDG]
 2=P0,9,K71,11 	-{Key press: ctl+shft+G}-
@@ -266,6 +270,8 @@ RangeRepeatRate=10
 1=Aerosoft A320 professional WIZZ AIR UR-WUC
 2=Aerosoft A321 professional LUFTHANSA D-AISP
 3=Aerosoft A319 professional DELTA N319NB
+4=Aerosoft A320 professional BRITISH AIRWAYS G-EUUU
+5=Aerosoft A321 professional DELTA N301DN
 
 [Axes.Aerosoft]
 RangeRepeatRate=10
@@ -309,9 +315,9 @@ RangeRepeatRate=10
 
 
 [AutoSaveFilesV5]
-Next=1
-1=Tue 020349
-2=Tue 020849
+Next=2
+1=Sun 002217
+2=Sun 001718
 
 [MacroFiles]
 1=disc a-t
@@ -349,8 +355,10 @@ CowlFlaps4Control=66165
 SteeringTillerControl=0
 MaxSteerSpeed=60
 RudderBlendLowest=1
-Rudder=-16380,-512,512,16380/16
+Rudder=-16380,-512,512,16380
 SlopeRudder=-14
+Throttle1=-16383,16191,16191,16191/48
+Throttle2=-16223,-512,512,16223/48
 
 [LuaFiles]
 1=ipcReady
@@ -402,16 +410,15 @@ Undocked=-846, 280, 632, 499
 
 [Axes.PMDG-747]
 RangeRepeatRate=10
-0=0X,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
-1=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
-2=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
-3=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
-4=2X,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
-5=2R,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
-6=2U,256,D,12,0,0,0	-{ DIRECT: Throttle4 }-
-7=2V,256,D,11,0,0,0	-{ DIRECT: Throttle3 }-
-8=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
-9=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
+0=0Z,256,D,4,0,0,0	-{ DIRECT: Throttle }-
+1=0R,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+2=0S,256,D,3,0,0,0	-{ DIRECT: Rudder }-
+3=2X,256,D,9,0,0,0	-{ DIRECT: Throttle1 }-
+4=2R,256,D,10,0,0,0	-{ DIRECT: Throttle2 }-
+5=2U,256,D,12,0,0,0	-{ DIRECT: Throttle4 }-
+6=2V,256,D,11,0,0,0	-{ DIRECT: Throttle3 }-
+7=3X,256,D,1,0,0,0	-{ DIRECT: Aileron }-
+8=3Y,256,D,2,0,0,0	-{ DIRECT: Elevator }-
 
 [JoystickCalibration.PMDG-747]
 AllowSuppressForPFCquad=Yes
@@ -450,6 +457,7 @@ SyncSlopeThrottle3=0/0
 [Profile.QW-787]
 1=QualityWings 787-8 House (RR)
 2=QualityWings 787-9 British Airways
+3=QualityWings 787-8 British Airways
 
 [Buttons.QW-787]
 2=P0,9,K71,11 	-{Key press: ctl+shft+G}-
@@ -468,6 +476,14 @@ SyncSlopeThrottle3=0/0
 15=U2,10,C65972,0 	-{THROTTLE2_CUT}-
 16=R2,9,C65966,0 	-{THROTTLE1_DECR}-
 17=U2,9,C65967,0 	-{THROTTLE1_CUT}-
+18=R3,5,C65607,0 	-{ELEV_TRIM_DN}-
+19=R3,4,C65615,0 	-{ELEV_TRIM_UP}-
+20=R3,6,C65615,0 	-{ELEV_TRIM_UP}-
+21=R3,7,C65607,0 	-{ELEV_TRIM_DN}-
+22=R3,11,C66279,0 	-{RUDDER_TRIM_RIGHT}-
+23=R3,10,C66278,0 	-{RUDDER_TRIM_LEFT}-
+24=R3,8,C66278,0 	-{RUDDER_TRIM_LEFT}-
+25=R3,9,C66279,0 	-{RUDDER_TRIM_RIGHT}-
 
 [Axes.QW-787]
 RangeRepeatRate=10
@@ -504,7 +520,7 @@ CowlFlaps4Control=66165
 SteeringTillerControl=0
 MaxSteerSpeed=60
 RudderBlendLowest=1
-Rudder=-16380,-512,512,16380/16
+Rudder=-16380,-512,512,16380
 SlopeRudder=-14
 Throttle1=-16383,-512,512,16287/48
 Throttle2=-16383,16319,16319,16352/48
